# scc

./: .gitignore  Cargo.toml  README.md  compiler.sh
src/: ast.rs  function_checks.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.rs  tac.rs
src/ast/: ast.rs  mod.rs  visitor.rs
src/generator/: allocator.rs  asm.rs  formatter.rs  from_tac.rs  generator.rs  mod.rs  syntax.rs  tac_gen.rs  translator.rs  x64_translator.rs
src/il/: constant_fold.rs  lifeinterval.rs  mod.rs  tac.rs  unused_code.rs
src/lexer/: lexer.rs
src/parser/: parser.rs
src/pretty_output/: decl.rs  mod.rs  program.rs  tac.rs  tokens.rs
src/semantic_checks/: function_checks.rs  global_vars.rs  mod.rs
tests/: compare.rs  expr.rs  precedence.rs  program.rs
