[package]
name = "simple-c-compiler"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"